WSAS-2215 : Fixing server not starting issue in integration tests in MAC machines